--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,21 @@ body{
     align-items: center;
     align-content: center;
     flex-direction: column;
+    padding-top: 7%;
 }
 
 h1{
     color: #EEF5FF;
+    font-family: Montserrat;
+    font-size: 2.5rem;
+    font-weight: 600;
 }
 
 .form{
     height: 50%;
-    width: 35%;
+    width: 40%;
     border: 1px solid #EEF5FF;
+    border-radius: 20px;
     padding: 20px;
     background-color: #176B87;
     display: flex;
@@ -24,4 +29,35 @@ h1{
     align-items: center;
     align-content: center;
     justify-content: space-evenly;
+}
+
+.City { 
+    height: 50px;
+    width: 55%;
+    margin-bottom: 10px;
+    font-size: large;
+    font-family: Montserrat;
+    color: #176B87;
+    text-align: center;
+    border-radius: 5px;
+    border: none;
+    padding: 2px;
+}
+
+#fetchBtn{
+    height: 50px;
+    width: auto;
+    border: 2px solid #EEF5FF;
+    background-color: #176B87;
+    font-size: large;
+    color: #EEF5FF;
+    font-family: Montserrat;
+    border-radius: 5px;
+}
+
+p{
+    margin: 10px auto 10px auto;
+    color: #EEF5FF;
+    font-family: Montserrat;
+    font-weight: 700;
 }
