--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("https://wallpaperswide.com/download/clouds_12-wallpaper-2560x1920.jpg");
+    background-image: url("resources/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -7,19 +7,22 @@ body{
     align-items: center;
     align-content: center;
     flex-direction: column;
-    padding-top: 7%;
+    margin: 0;
+    padding: 0;
 }
 
 h1{
     color: #EEF5FF;
     font-family: Montserrat;
     font-size: 2.5rem;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .form{
-    height: 50%;
-    width: 40%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    height:fit-content  ;
+    width: fit-content;
     border: 1px solid #EEF5FF;
     border-radius: 20px;
     padding: 20px;
@@ -59,5 +62,10 @@ p{
     margin: 10px auto 10px auto;
     color: #EEF5FF;
     font-family: Montserrat;
-    font-weight: 700;
+    font-weight: 400;
+}
+
+#detail{
+    font-size: xx-large;
+    font-weight: 600;
 }
